--- a/src/scss/_patterns_forms.scss
+++ b/src/scss/_patterns_forms.scss
@@ -49,7 +49,7 @@
   // Override Vanilla's default light text for readonly textareas and make text
   // small. Used for displaying very long strings, e.g. certificates.
   .p-textarea--readonly {
-    color: $color-dark !important;
+    // color: $color-dark !important;
     font-size: #{map.get($font-sizes, small)}rem;
   }
 
